[gd_scene load_steps=11 format=3 uid="uid://bjyrekj7d6cal"]

[ext_resource type="Script" path="res://gui/hud.gd" id="1_g3w1t"]
[ext_resource type="PackedScene" uid="uid://d0d4pvp0xmvo" path="res://gui/icon_button.tscn" id="1_jofjt"]
[ext_resource type="PackedScene" uid="uid://cclbjlc3hx2lv" path="res://gui/title_label.tscn" id="3_hd6d2"]
[ext_resource type="Shortcut" uid="uid://ctl670m8ewyx" path="res://gui/esc_shortcut.tres" id="4_lhl6p"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ydja5"]
blend_mode = 4

[sub_resource type="ViewportTexture" id="ViewportTexture_pcn2m"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g71of"]

[sub_resource type="Animation" id="Animation_1ut3m"]
resource_name = "fade_in"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewport/Title:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_usx6i"]
resource_name = "fade_out"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewport/Title:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_43tb3"]
_data = {
"fade_in": SubResource("Animation_1ut3m"),
"fade_out": SubResource("Animation_usx6i")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_g3w1t")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.88)
material = SubResource("CanvasItemMaterial_ydja5")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_pcn2m")
stretch_mode = 5

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)

[node name="Title" type="VBoxContainer" parent="SubViewport"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.88)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -181.0
offset_right = 181.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control2" type="Control" parent="SubViewport/Title"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Label" parent="SubViewport/Title" instance=ExtResource("3_hd6d2")]
layout_mode = 2

[node name="ThanksLbl" type="Label" parent="SubViewport/Title"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_g71of")
text = "Thank you for playing!"
horizontal_alignment = 1

[node name="Control" type="Control" parent="SubViewport/Title"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IGMBtn" parent="MarginContainer/VBoxContainer/Header" instance=ExtResource("1_jofjt")]
layout_mode = 2
shortcut = ExtResource("4_lhl6p")

[node name="Center" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SkipTutorialBtn" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Skip Tutorial"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_43tb3")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/IGMBtn" to="." method="_on_igm_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Footer/SkipTutorialBtn" to="." method="_on_skip_tutorial_btn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_title_timer_timeout"]
